# EDOL

./: .gitignore  README.md  devbox.json  edol-config.toml  pyproject.toml
clients/chameleon/: README.md  pyproject.toml
clients/chameleon/chameleon/: binning.sql  chameleon.proto  data_collector.py  db.py  report_generator.py  s3.py  schema.sql  tables.py
clients/copernicus_cds/: pyproject.toml
clients/copernicus_cds/copernicus_cds/: geo_to_grid.py  netcdf_utils.py  request.py  schemas.py
clients/hpmorg/: pyproject.toml
clients/hpmorg/hpmorg/: semi-manual-fetch.py
clients/tadoclient/: pyproject.toml
clients/tadoclient/tadoclient/: client.py  exceptions.py  models.py  utils.py
clients/vaillant/: pyproject.toml
clients/vaillant/vaillant/: api.py  schemas.py
edol-cli/: pyproject.toml
edol-cli/edol_cli/: cli.py  config.py
edol-cli/edol_cli/commands/: chameleon.py  climate.py  climate_config.py  vaillant.py  version.py
web/participant-self-care/: pyproject.toml
web/participant-self-care/participant_self_care/: app.py  tado_decorator.py
web/participant-self-care/participant_self_care/core/: config.py  security.py
web/participant-self-care/participant_self_care/db/: session.py  tado.py  users.py
web/participant-self-care/participant_self_care/schemas/: users.py
web/participant-self-care/participant_self_care/services/: auth.py  tado.py
web/participant-self-care/participant_self_care/static/: login.html
web/participant-self-care/participant_self_care/users/: db.py  users.py
web/participant-self-care/participant_self_care/web/: app.py
web/participant-self-care/participant_self_care/web/htmx/: __init__.py  tado.py
web/participant-self-care/participant_self_care/web/routes/: auth.py  dashboard.py  status.py  tado.py
web/participant-self-care/participant_self_care/web/templates/: base.html  login.html
web/participant-self-care/participant_self_care/web/templates/dashboard/: index.html
web/participant-self-care/participant_self_care/web/templates/partials/tado/: card.html
