[tool.poetry]
name = "edol"
version = "0.1.0"
description = "The monorepo for the EDOL.uk"
authors = ["Cristian Dinu <c.dinu@ucl.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tadoclient = { path = "clients/tadoclient", develop = true }
participant_self_care = { path = "web/participant-self-care", develop = true }
copernicus_cds = { path = "clients/copernicus_cds", develop = true }
vaillant = { path = "clients/vaillant", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pre-commit = "^4.0.1"
bandit = "^1.7.10"
safety = "^3.2.8"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
