[tool.poetry]
name = "tadoclient"
version = "0.1.0"
description = ""
authors = ["Cristian Dinu <c.dinu@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.9.2"
httpx = "^0.27.2"
# assumes edol.tadoclient is available

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
