[tool.poetry]
name = "vaillant"
version = "0.1.0"
description = ""
authors = ["Cristian Dinu <c.dinu@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.10.4"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
